[gd_scene load_steps=5 format=3 uid="uid://uw6tveiekneb"]

[ext_resource type="Script" path="res://scripts/air_bullet.gd" id="1_ed7ub"]
[ext_resource type="Texture2D" uid="uid://cwrngx2ahuwpm" path="res://air_bullet.png" id="2_kaepa"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7losp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_kaepa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lmqu4"]
radius = 2.0
height = 28.0

[node name="AirBullet" type="Area2D"]
collision_layer = 8
script = ExtResource("1_ed7ub")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_7losp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_lmqu4")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="OffScreenTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="OffScreenTimer" to="." method="_on_off_screen_timer_timeout"]
